# research-graph-memory

./: .env.example  .gitignore  README.md  README.ru.md  README.zh-CN.md  pyproject.toml
configs/: edge_policy.yaml  extraction.yaml  layers.yaml  retrieval.yaml  schema.yaml
docs/: graph-expansion-policy.md  promote-semantics.md  testing-methodology.zh-CN.md
docs/migrations/: v0.1.3-add-extraction-confidence.sql
examples/: synthetic_holographic.json
examples/synthetic_notes/: sample_research_note.md
src/rgm/: __init__.py  cli.py  config.py  models.py
src/rgm/adapters/: experiment.py  holographic.py  markdown.py
src/rgm/api/: server.py
src/rgm/eval/: __init__.py  models.py  runner.py
src/rgm/extraction/: __init__.py  base.py  hermes_provider.py  providers.py  rule_based.py
src/rgm/graph/: builder.py  edge_policy.py  lightweight_edges.py  schema.py  traversal.py  validation.py
src/rgm/memory/: forget.py  promote.py  recall.py  remember.py  write_policy.py
src/rgm/retrieval/: context_builder.py  dense_embedding.py  fts_search.py  (+2 more)
tests/: test_api.py  test_edge_governance.py  test_eval_runner.py  test_graph_edges.py  test_holographic_import.py  test_jsonl_roundtrip.py  test_markdown_ingest.py  test_project_isolation.py  test_recall.py  test_research_markdown_extraction.py
tests/eval/: graph_reasoning_queries.jsonl  hermes_contract_queries.jsonl  lexical_queries.jsonl  multilingual_queries.jsonl  negative_queries.jsonl  regression_queries.jsonl  semantic_gap_queries.jsonl  semantic_queries.jsonl  smoke_queries.jsonl  update_queries.jsonl
(+2 files in other folders)
