[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-graph-memory"
version = "0.1.2"
description = "Heterogeneous multi-layer research graph memory for long-lived agent memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "networkx>=3.2",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
rgm = "rgm.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rgm"]
