[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-graph-memory"
version = "0.1.3"
description = "Heterogeneous multi-layer research graph memory for long-lived agent memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "networkx>=3.2,<4.0",
  "pydantic>=2.6,<3.0",
  "pyyaml>=6.0,<7.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[project.scripts]
rgm = "rgm.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rgm"]
